# abstract-datastructures-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
traitgraph/: Cargo.toml  README.md
traitgraph-algo/: Cargo.toml  README.md
traitgraph-algo/benches/: benches.rs
traitgraph-algo/src/: components.rs  eulerian.rs  lib.rs  predefined_graphs.rs
traitgraph-algo/src/dijkstra/: dijkstra_weight_implementations.rs  epoch_array_dijkstra_node_weight_array.rs  hashbrown_dijkstra_node_weight_array.rs  mod.rs  performance_counters.rs
traitgraph-algo/src/traversal/: mod.rs  univocal_traversal.rs
traitgraph-dimacs-io/: Cargo.toml  README.md
traitgraph-dimacs-io/src/: lib.rs
traitgraph-tsplib-io/: Cargo.toml  README.md
traitgraph-tsplib-io/src/: lib.rs
traitgraph/src/: index.rs  lib.rs  walks.rs
traitgraph/src/implementation/: bit_vector_subgraph.rs  incremental_subgraph.rs  induced_bit_vector_subgraph.rs  mod.rs  petgraph_impl.rs  subgraph_operators.rs
traitgraph/src/implementation/subgraph_operators/: inverted_subgraph.rs  union_subgraph.rs
traitgraph/src/implementation/subgraphs/: bit_vector_subgraph.rs  filter_iterators.rs  incremental_subgraph.rs  induced_bit_vector_subgraph.rs  induced_incremental_subgraph.rs  mod.rs
traitgraph/src/implementation/subgraphs/subgraph_operators/: inverted_subgraph.rs  union_subgraph.rs
traitgraph/src/interface/: mod.rs  subgraph.rs
traitsequence/: Cargo.toml  README.md
traitsequence/src/: interface.rs
traitsequence/src/implementation/: slice.rs  vec.rs
