[package]
name = "traitgraph-algo"
description = "Graph algorithms based on the traitgraph crate"
categories = ["data-structures", "mathematics", "science"]
keywords = ["graph", "trait", "abstract", "implementation", "algorithm"]
version = "0.7.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2018"
homepage = "https://github.com/sebschmi/abstract-datastructures-rs"
documentation = "https://docs.rs/traitgraph-algo"
repository = "https://github.com/sebschmi/abstract-datastructures-rs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.49.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hashbrown_dijkstra_node_weight_array = ["hashbrown"]

[dependencies]
traitgraph = {version = "0.7.0", path = "../traitgraph"}
rand = "0.8.4"
hashbrown = {version = "0.12.0", optional = true}

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benches"
harness = false
