[package]
name = "traitgraph-algo"
description = "Graph algorithms based on the traitgraph crate"
categories = ["data-structures", "mathematics", "science"]
keywords = ["graph", "trait", "abstract", "implementation", "algorithm"]
version = "7.0.0-alpha.5"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
homepage = "https://github.com/sebschmi/abstract-datastructures-rs"
documentation = "https://docs.rs/traitgraph-algo"
repository = "https://github.com/sebschmi/abstract-datastructures-rs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hashbrown_dijkstra_node_weight_array = []

[dependencies]
traitgraph = {version = "4.0.0-alpha.6", path = "../traitgraph"}
rand = "0.8.4"
hashbrown = {version = "0.14.0"}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
