[package]
name = "traitgraph-algo"
description = "Graph algorithms based on the traitgraph crate"
categories = ["data-structures", "mathematics", "science"]
keywords = ["graph", "trait", "abstract", "implementation", "algorithm"]
version = "8.1.2"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
homepage = "https://github.com/sebschmi/abstract-datastructures-rs"
documentation = "https://docs.rs/traitgraph-algo"
repository = "https://github.com/sebschmi/abstract-datastructures-rs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hashbrown_dijkstra_node_weight_array = []

[dependencies]
traitgraph = { version = "8.1.1", path = "../traitgraph" }
rand = "0.9.0"
hashbrown = { version = "0.15.2" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
