[package]
name = "traitgraph"
description = "Abstracting over different graph representations"
categories = ["data-structures", "mathematics", "science"]
keywords = ["graph", "trait", "abstract", "implementation"]
version = "0.6.1"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2018"
homepage = "https://github.com/sebschmi/abstract-datastructures-rs"
documentation = "https://docs.rs/traitgraph"
repository = "https://github.com/sebschmi/abstract-datastructures-rs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.49.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.1"
num-traits = "0.2.14"
bitvector = "0.1.5"
traitsequence = "0.6.0"
