[package]
name = "traitgraph"
description = "Abstracting over different graph representations"
categories = ["data-structures", "mathematics", "science"]
keywords = ["graph", "trait", "abstract", "implementation"]
version = "3.0.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
homepage = "https://github.com/sebschmi/abstract-datastructures-rs"
documentation = "https://docs.rs/traitgraph"
repository = "https://github.com/sebschmi/abstract-datastructures-rs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.2"
num-traits = "0.2.14"
bitvector = "0.1.5"
traitsequence = {version = "1.1.0", path = "../traitsequence"}
