[package]
name = "traitsequence"
description = "Traits to abstract over sequences."
categories = ["data-structures"]
keywords = ["sequence", "trait", "abstract", "strong-typedef"]
version = "1.1.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
homepage = "https://github.com/sebschmi/abstract-datastructures-rs"
documentation = "https://docs.rs/traitsequence"
repository = "https://github.com/sebschmi/abstract-datastructures-rs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
