[package]
name = "traitsequence"
description = "Traits to abstract over sequences."
categories = ["data-structures"]
keywords = ["sequence", "trait", "abstract", "strong-typedef"]
version = "8.1.2"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
homepage = "https://github.com/sebschmi/abstract-datastructures-rs"
documentation = "https://docs.rs/traitsequence"
repository = "https://github.com/sebschmi/abstract-datastructures-rs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
